--- a/talk_1/src/components/shared/Navbar.astro
+++ b/talk_1/src/components/shared/Navbar.astro
@@ -1,8 +1,12 @@
 ---
-
+const x = { x: 123 };
+const y = ['ciao'];
 ---
 
-<nav transition:persist>
+<nav
+  transition:persist
+  title="ok"
+>
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/about">About</a></li>
