complete and fix husky and lint-staged setup

--- a/talk_1/src/components/shared/Navbar.astro
+++ b/talk_1/src/components/shared/Navbar.astro
@@ -1,12 +1,7 @@
 ---
-const x = { x: 123 };
-const y = ['ciao'];
 ---
 
-<nav
-  transition:persist
-  title="ok"
->
+<nav transition:persist>
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/about">About</a></li>
