--- a/talk_1/src/pages/index.astro
+++ b/talk_1/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import RootLayout from '@/layouts/RootLayout.astro';
 import { Image } from 'astro:assets';
-import duckycodingLogo from '/images/DuckyCoding_logo.png';
 ---
 
 <RootLayout title="Astro Tech Talk - Ducky Coding">
@@ -30,16 +29,16 @@ import duckycodingLogo from '/images/DuckyCoding_logo.png';
       href="/demos/2-routing"
       class="card"
     >
-      <h2>2. Routing</h2>
-      <p>Prefetching & View Transitions.</p>
+      <h2>2. View Transitions</h2>
+      <p>Make MPA feel like a SPA with smooth transitions.</p>
     </a>
 
     <a
       href="/demos/3-islands"
       class="card"
     >
-      <h2>3. Islands</h2>
-      <p>Interactive React Components.</p>
+      <h2>3. Client Islands</h2>
+      <p>Interactive framework agnostic Components.</p>
     </a>
 
     <a
