--- a/talk_1/src/pages/index.astro
+++ b/talk_1/src/pages/index.astro
@@ -53,8 +53,8 @@ import { Image } from 'astro:assets';
       href="/demos/5-content"
       class="card"
     >
-      <h2>5. Content</h2>
-      <p>Type-safe Collections.</p>
+      <h2>5. Ship Registry</h2>
+      <p>Type-safe Content Collections.</p>
     </a>
 
     <a
